--- a/app/Resources/views/Front/front.html.twig
+++ b/app/Resources/views/Front/front.html.twig
@@ -44,7 +44,7 @@
                     </div>
                     <div class="span7">
                         <div class="pull-right">
-                            {{ locale_switcher() }}
+                            {% include '::locale_switcher.html.twig' %}
                         </div>
                         <h3 class="login-header">{{ 'page.front.log_in'|trans }}</h3>
 
