--- a/app/Resources/views/Picture/picture_modal.html.twig
+++ b/app/Resources/views/Picture/picture_modal.html.twig
@@ -1,13 +1,12 @@
 <div class="modal container" id="photo-modal" tabindex="-1" data-modal-overflow="true">
     <div class="modal-body">
-        <ul class="breadcrumb">
-            <li><a href="{{ path('profile',{'id':profile.id}) }}" data-ajax data-modal>{{ profile_picture(profile, 'thumbnail') }} {{ profile.user.name }}</a> <span class="divider">/</span></li>
-            <li><a href="#">Library</a> <span class="divider">/</span></li>
-            <li class="active">Data</li>
-        </ul>
         <div class="row-fluid">
-            <div class="span9 photo-container">
+            <div class="span9 photo-container" style="position: relative">
                 {{ picture(picture, null, {'class':'photo'}, {'max_width':848, 'max_height':848}) }}
+                <div class="photo-caption">
+                    <a href="{{ path('profile',{'id':profile.id}) }}" data-ajax data-modal>{{ profile_picture(profile, 'thumbnail') }}</a>
+                    <a href="{{ path('profile',{'id':profile.id}) }}" data-ajax data-modal>{{ profile.user.name }}</a>
+                </div>
             </div>
             <div class="span3 photo-comments" data-pjax-container="picture_comments-{{ picture.id }}">
                 <h3>Comments</h3>
