--- a/app/Resources/views/Profile/view.html.twig
+++ b/app/Resources/views/Profile/view.html.twig
@@ -9,7 +9,7 @@
     {% include ':Profile:tabs.html.twig' %}
 
     <p>
-        {{ profile_info.getSearchInfo(profile) }}
+        {{ profile_search_info(profile) }}
     </p>
 
     <hr>
