--- a/app/Resources/views/Account/sidebar.html.twig
+++ b/app/Resources/views/Account/sidebar.html.twig
@@ -1,5 +1,5 @@
 {% set route = app.request.attributes.get('_route') %}
-<ul class="nav nav-tabs nav-stacked nav-chevron">
+<ul class="nav nav-list">
     <li class="{{ route == 'account_overview' ? 'active' : '' }}"><a href="{{ path('account_overview') }}" data-ajax data-loader="#account-info" data-loader-type="overlay"><i class="icon-chevron-right pull-right"></i>General</a></li>
     <li class="{{ route == 'account_edit_name' ? 'active' : '' }}"><a href="{{ path('account_edit_name') }}" data-ajax data-loader="#account-info" data-loader-type="overlay"><i class="icon-chevron-right pull-right"></i>Change name</a></li>
     <li class="{{ route == 'account_edit_email' ? 'active' : '' }}"><a href="{{ path('account_edit_email') }}" data-ajax data-loader="#account-info" data-loader-type="overlay"><i class="icon-chevron-right pull-right"></i>Change e-mail address</a></li>
