--- a/app/Resources/views/Timeline/components.html.twig
+++ b/app/Resources/views/Timeline/components.html.twig
@@ -3,7 +3,7 @@
 {% endblock %}
 
 {% block _kurumi_mainbundle_entity_picture_picture_component %}
-    <a data-ajax class="thumbnail" href="{{ path('profile_photo', {'id':value.id}) }}">
+    <a data-ajax class="thumbnail" href="{{ path('picture', {'id':value.id}) }}">
         {{ picture(value, 'timeline') }}
     </a>
 {% endblock %}
