--- a/app/Resources/views/Front/front.html.twig
+++ b/app/Resources/views/Front/front.html.twig
@@ -63,7 +63,7 @@
                     <div class="row">
                         <div class="span3">
                             <div class="row-fluid">
-                                <img src="/images/icon-happy.png" class="pull-left">
+                                <img src="{{ asset('images/icon-happy.png') }}" class="pull-left">
                                 <h4 class="title">Fun</h4>
 
                                 <p>Kurumi is all about having fun, playing games and visiting profiles.</p>
@@ -71,7 +71,7 @@
                         </div>
                         <div class="span3">
                             <div class="row-fluid">
-                                <img src="/images/icon-chat.png" class="pull-left">
+                                <img src="{{ asset('images/icon-chat.png') }}" class="pull-left">
                                 <h4 class="title">Chat</h4>
 
                                 <p>We promise you lots of people who are eager to have a chat.</p>
@@ -79,7 +79,7 @@
                         </div>
                         <div class="span3">
                             <div class="row-fluid">
-                                <img src="/images/icon-no-robots.png" class="pull-left">
+                                <img src="{{ asset('images/icon-no-robots.png') }}" class="pull-left">
                                 <h4 class="title">With real people</h4>
 
                                 <p>No fake profiles on Kurumi. You should feel safe and have lots of fun!</p>
@@ -87,7 +87,7 @@
                         </div>
                         <div class="span3">
                             <div class="row-fluid">
-                                <img src="/images/icon-new-people.png" class="pull-left">
+                                <img src="{{ asset('images/icon-new-people.png') }}" class="pull-left">
                                 <h4 class="title">The rest is up to you</h4>
 
                                 <p>Kurumi is for everyone, so come on in and join the fun!</p>
@@ -99,7 +99,7 @@
             <div class="footer-wrapper">
                 <div class="container">
                     <ul class="nav nav-pills">
-                        <li><img class="logo" src="/images/logo-gray.png" height="31" width="124"></li>
+                        <li><img class="logo" src="{{ asset('images/logo-gray.png') }}" height="31" width="124"></li>
                         <li><a href>About</a></li>
                         <li><a href>Privacy</a></li>
                         <li><a href>Terms of use</a></li>
