--- a/app/Resources/views/Profile/layout.html.twig
+++ b/app/Resources/views/Profile/layout.html.twig
@@ -38,34 +38,29 @@
                 </div>
             </div>
             <div class="span3">
-                <ul class="nav nav-tabs nav-stacked">
+                <ul class="nav nav-list">
                     <li>
                         <a data-ajax href="#">
                             Recent visitors
-                            <span class="badge pull-right"">2</span>
-                            <div class="clearfix"></div>
+                            <span class="badge pull-right">2</span>
                         </a>
                     </li>
                     <li>
                         <a data-ajax href="#">
                             Who likes me
-                            <span class="badge pull-right"">2</span>
-                            <div class="clearfix"></div>
+                            <span class="badge badge-success pull-right">2</span>
                         </a>
                     </li>
                     <li>
                         <a data-ajax href="#">
                             Who I like
                             <span class="badge-empty pull-right">0</span>
-
-                            <div class="clearfix"></div>
                         </a>
                     </li>
                     <li>
                         <a data-ajax href="#">
                             Mutual attractions
-                            <span class="badge pull-right"">2</span>
-                            <div class="clearfix"></div>
+                            <span class="badge pull-right">2</span>
                         </a>
                     </li>
                 </ul>
