--- a/app/Resources/views/Timeline/profile_picture_add.html.twig
+++ b/app/Resources/views/Timeline/profile_picture_add.html.twig
@@ -1,6 +1,6 @@
 <div class="timeline-action">
     <p>
-        <i class="icon-camera"></i> {{ timeline_component_render(timeline, 'subject') }} added a picture
+        <span class="glyphicon glyphicon-camera"></span> {{ timeline_component_render(timeline, 'subject') }} added a picture
     </p>
     <div>
         {{ timeline_component_render(timeline, 'picture') }}
