--- a/app/Resources/views/Info/sidebar.html.twig
+++ b/app/Resources/views/Info/sidebar.html.twig
@@ -1,6 +1,6 @@
 {%  set route = app.request.attributes.get('_route') %}
 <h1>Help</h1>
 <ul class="nav nav-tabs nav-stacked nav-chevron">
-    <li class="{{ route == 'info_faq' ? 'active' : '' }}"><a href="{{ path('info_faq') }}" data-ajax><i class="icon-chevron-right pull-right"></i>Frequently asked questions</a></li>
-    <li class="{{ route == 'info_general' ? 'active' : '' }}"><a href="{{ path('account_edit_name') }}" data-ajax><i class="icon-chevron-right pull-right"></i>Change name</a></li>
+    <li class="{{ route == 'info_faq' ? 'active' : '' }}"><a href="{{ path('info_faq') }}" data-ajax><span class="glyphicon glyphicon-chevron-right pull-right"></span>Frequently asked questions</a></li>
+    <li class="{{ route == 'info_general' ? 'active' : '' }}"><a href="{{ path('account_edit_name') }}" data-ajax><span class="glyphicon glyphicon-chevron-right pull-right"></span>Change name</a></li>
 </ul>
