--- a/app/Resources/views/Segment/navbar_top.html.twig
+++ b/app/Resources/views/Segment/navbar_top.html.twig
@@ -2,23 +2,36 @@
 {% set route_params = app.request.attributes.get('_route_params') %}
 <div>
     <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <a data-ajax data-loader="#body" data-loader-type="overlay" href="{{ path('home') }}" class="brand">{{ site_name }}</a>
+        <div class="container">
+
+            <a href="#" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+
+            <a data-ajax data-loader="#body" data-loader-type="overlay" href="{{ path('home') }}" class="navbar-brand">{{ site_name }}</a>
+
+            <div class="nav-collapse collapse">
 
                 <ul class="nav">
                     {% if app.user %}
-                        <li class="{{ route == 'play' ? 'active' : '' }}"><a data-ajax data-loader="#body" data-loader-type="overlay" href="{{ path('play') }}"><i class="icon-star"></i> Play</a></li>
-                        <li class="{{ route == 'search' ? 'active' : '' }}"><a data-ajax data-loader="#body" data-loader-type="overlay" href="{{ path('search') }}"><i class="icon-globe"></i> Search</a></li>
-                        <li class="{{ app.user and route in ['profile','profile_pictures'] and route_params.id == app.user.profile.id ? 'active' : '' }}"><a data-ajax data-loader="#body" data-loader-type="overlay" href="{{ path('profile', {'id':app.user.profile.id}) }}"><i class="icon-home"></i> Profile</a></li>
+                        <li class="{{ route == 'play' ? 'active' : '' }}"><a data-ajax data-loader="#body" data-loader-type="overlay" href="{{ path('play') }}"><span class="glyphicon glyphicon-star"></span> Play</a></li>
+                        <li class="{{ route == 'search' ? 'active' : '' }}"><a data-ajax data-loader="#body" data-loader-type="overlay" href="{{ path('search') }}"><span class="glyphicon glyphicon-globe"></span> Search</a></li>
+                        <li class="{{ app.user and route in ['profile','profile_pictures'] and route_params.id == app.user.profile.id ? 'active' : '' }}"><a data-ajax data-loader="#body" data-loader-type="overlay" href="{{ path('profile', {'id':app.user.profile.id}) }}"><span class="glyphicon glyphicon-home"></span> Profile</a></li>
                     {% else %}
                         <li class="{{ route == 'register' ? 'active' }}"><a href="{{ path('register') }}">Join us now!</a></li>
                     {% endif %}
                 </ul>
 
                 {% if app.user %}
-                    <div class="btn-group pull-right">
-                        <a class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-user"></i> <span class="caret"></span></a>
+                <ul class="nav pull-right">
+                    <li>
+                        <a id="buy-credits-top" class="" href="{{ path('payment') }}" data-ajax><span class="badge badge-info">0</span> credits</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li id="account-edit">
                                 <a href="{{ path('account_overview') }}" data-ajax data-loader="#body" data-loader-type="overlay">
@@ -37,14 +50,12 @@
                             <li class="divider"></li>
                             <li><a href="{{ logout_url(main_firewall_name) }}" data-ajax>Log out</a></li>
                         </ul>
-                    </div>
-                    <div class="divider-vertical pull-right"></div>
-                    <div class=" pull-right">
-                        <a id="buy-credits-top" class=" btn btn-mini" href="{{ path('payment') }}" data-ajax><span class="badge badge-info">0</span> credits</a>
-                    </div>
-                {% endif %}
-
+                    </li>
+                </ul>
             </div>
+            {% endif %}
+
         </div>
+
     </div>
 </div>
