--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,11 +5,11 @@
     <title>{{ block('title') }}</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ asset('bootstrap/less/bootstrap.less') }}">
+    {#<link rel="stylesheet" href="{{ asset('bootstrap/less/bootstrap.less') }}">#}
+    <link rel="stylesheet" href="http://bootstrap.servehttp.com/assets/css/bootstrap.css">
     <link rel="stylesheet" href="{{ asset('less/style.less') }}">
     <link rel="stylesheet" href="{{ asset('bundles/briareoschat/css/chat.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/kurumimain/css/bootstrap-fileupload.css') }}">
-    <link rel="stylesheet" href="{{ asset('bundles/kurumimain/css/bootstrap-modal.css') }}">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
 
@@ -32,24 +32,23 @@
     <script src="{{ asset('bundles/briareosnodejs/js/nodejs.js') }}"></script>
     <script src="{{ asset('bundles/briareoschat/js/chat.js') }}"></script>
     <script src="{{ asset('bundles/kurumimain/js/bootstrap-fileupload.js') }}"></script>
-    <script src="{{ asset('bundles/kurumimain/js/bootstrap-modal.js') }}"></script>
-    <script src="{{ asset('bundles/kurumimain/js/bootstrap-modalmanager.js') }}"></script>
     <script src="{{ socket_io_resource() }}"></script>
     <script src="{{ asset('libraries/wookmark/jquery.wookmark.js') }}"></script>
     <script src="{{ asset('js/core.js') }}"></script>
 
     <script>
+        {% spaceless %}
         $(function () {
-            var settings =
             $.each({{ javascript_settings()|json_encode|raw }}, function (index, javascriptSettings) {
                 window.setSettings(javascriptSettings.name, javascriptSettings.settings, $('body'));
             });
         });
+        {% endspaceless %}
     </script>
 </head>
 <body>
-<div data-pjax-container="body" id="body" class="page-container">
-        {{ block('body') }}
+<div data-pjax-container="body" id="body">
+    {{ block('body') }}
 </div>
 </body>
 </html>
