More Bootstrap 3 coverage

--- a/app/Resources/views/Payment/payment.html.twig
+++ b/app/Resources/views/Payment/payment.html.twig
@@ -1,5 +1,5 @@
 {% if app.request.isXmlHttpRequest %}
-    <div class="modal" id="modal-payment">
+    <div class="modal fade in" id="modal-payment">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
