--- a/app/Resources/views/Picture/add_modal.html.twig
+++ b/app/Resources/views/Picture/add_modal.html.twig
@@ -1,5 +1,9 @@
-<div class="modal">
-    <div class="modal-body">
-        {% include ':Form:add_picture_modal.html.twig' %}
+<div class="modal fade in">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                {% include ':Form:add_picture_modal.html.twig' %}
+            </div>
+        </div>
     </div>
 </div>
