--- a/app/Resources/views/Form/user_locale.html.twig
+++ b/app/Resources/views/Form/user_locale.html.twig
@@ -6,8 +6,10 @@
 
     {{ form_rest(form) }}
 
-    <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Save</button>
-        <a class="btn" href="{{ path('account_overview') }}" data-ajax>Cancel</a>
+    <div class="control-group">
+        <div class="controls">
+            <button type="submit" class="btn btn-primary">Save</button>
+            <a class="btn" href="{{ path('account_overview') }}" data-ajax>Cancel</a>
+        </div>
     </div>
 </form>
