--- a/app/Resources/views/Form/user_login_front.html.twig
+++ b/app/Resources/views/Form/user_login_front.html.twig
@@ -5,7 +5,7 @@
     </p>
     {% endif %}
 
-    <div class="row-fluid">
+    <div class="row">
         <div class="span5">
             <label for="login-email" class="control-label">{{ 'form.login.email'|trans }}</label>
             <input tabindex="1" value="{{ last_username }}" id="login-email" type="email" class="input-block-level {% if login_error is not empty %}error{% endif %}" name="email" required="required">
