--- a/app/Resources/views/Front/front.html.twig
+++ b/app/Resources/views/Front/front.html.twig
@@ -62,7 +62,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="span3">
-                            <div class="row-fluid">
+                            <div class="row">
                                 <img src="{{ asset('images/icon-happy.png') }}" class="pull-left">
                                 <h4 class="title">Fun</h4>
 
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div class="span3">
-                            <div class="row-fluid">
+                            <div class="row">
                                 <img src="{{ asset('images/icon-chat.png') }}" class="pull-left">
                                 <h4 class="title">Chat</h4>
 
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                         <div class="span3">
-                            <div class="row-fluid">
+                            <div class="row">
                                 <img src="{{ asset('images/icon-no-robots.png') }}" class="pull-left">
                                 <h4 class="title">With real people</h4>
 
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                         <div class="span3">
-                            <div class="row-fluid">
+                            <div class="row">
                                 <img src="{{ asset('images/icon-new-people.png') }}" class="pull-left">
                                 <h4 class="title">The rest is up to you</h4>
 
