--- a/app/Resources/views/Picture/view_modal.html.twig
+++ b/app/Resources/views/Picture/view_modal.html.twig
@@ -2,7 +2,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <div class="row-fluid">
+                <div class="row">
                     <div class="span9 photo-container" style="position: relative">
                         {{ picture(picture, null, {'class':'photo'}, {'max_width':848, 'max_height':848}) }}
                         <div class="photo-caption">
