--- a/app/Resources/views/Profile/layout.html.twig
+++ b/app/Resources/views/Profile/layout.html.twig
@@ -18,7 +18,7 @@
         </h1>
         <div class="row">
             <div class="span9">
-                <div class="row-fluid">
+                <div class="row">
                     <div class="span4">
                         {% if own_profile %}
                             <a href="{{ path('account_edit_picture') }}" data-ajax data-modal>
