--- a/app/Resources/views/Search/search.html.twig
+++ b/app/Resources/views/Search/search.html.twig
@@ -10,13 +10,13 @@
 
         {% include '::flash_messages.html.twig' %}
 
-        <div class="row-fluid">
+        <div class="row">
             <div class="span12 bevel search-form-container">
                 {% include ':Form:search_people.html.twig' %}
             </div>
         </div>
 
-        <div class="row-fluid">
+        <div class="row">
             {% if results %}
                 <div id="search_results">
                     {% for result in results %}
